js c'est l'enfer

--- a/pong_2/index.html
+++ b/pong_2/index.html
@@ -27,20 +27,14 @@
     </style>
 </head>
 <body>
-    <div id="bla">
+    <!-- <div id="bla">
         <script src="./index.js" type="module"></script>
-    </div>
-	<!-- <canvas id="pongGame"></canvas>
-    <div class="container text-start" style="position: absolute; top: 20px; left: 20px; width: 200px;">
-        <button id="restartGame" class="btn btn-danger w-100">Restart Game</button>
-    </div>
-    <div class="container text-start" style="position: absolute; top: 20px; right: 20px; width: 200px;">
-        <button id="mainmenu" class="btn btn-danger w-100">Main Menu</button>
-    </div>
+    </div> -->
+	<canvas id="pongGame"></canvas>
     <script type="module" src="class_object.js"></script>
     <script type="module" src="key_movement.js"></script>
     <script type="module" src="style.js"></script>
-    <script src="./main.js" type="module"></script> -->
+    <script src="./main.js" type="module"></script>
 
 </body>
 </html>
